# mmux-emacs-template

./: .gitignore  .travis.yml  Makefile.am  NEWS  README  README.md  acinclude.m4  configure.ac  configure.sh
doc/: elisp-macros.texi  macros.texi  mmux-emacs-template.texi  overview-linking.texi
meta/autoconf/: mmux-check-emacs-feature.m4  mmux-emacs-constant-tests.m4
meta/scripts/: mmux-emacs-template.pc.in
meta/slackware/: slack-desc.in
meta/travis-ci/: install-ccexceptions.sh  install-ccmemory.sh  install-ccstrings.sh  install-ccstructs.sh  install-cctests.sh
src/: mmux-emacs-internals.h  mmux-emacs-template-builtin-objects.c  mmux-emacs-template-internals.h  mmux-emacs-template-library.c  mmux-emacs-template-user-pointer-objects.c  mmux-emacs-template.el  mmux-emacs-template.h
tests/: builtin-objects-use.el  user-pointer-objects.el  version.c  version.el
