## Process this file with automake to produce Makefile.in

ACLOCAL_AMFLAGS		= -I meta/autotools
AUTOMAKE_OPTIONS	= foreign
EXTRA_DIST		= INSTALL			\
			  meta/slackware/slack-desc.in
dist_doc_DATA		= README COPYING
AM_CFLAGS		= $(MMUX_CFLAGS)
AM_CPPFLAGS		= -I$(srcdir)/src

## --------------------------------------------------------------------

nodist_pkgconfig_DATA	= meta/scripts/mmux-emacs-template.pc


#### documentation

AM_MAKEINFOFLAGS	= --no-split
AM_MAKEINFOHTMLFLAGS	= --split=node -c WORDS_IN_PAGE=0 \
	-c PRE_BODY_CLOSE="<p>This document describes version <tt>$(PACKAGE_VERSION)</tt> of <em>$(PACKAGE_NAME)</em>.</p>"

info_TEXINFOS		= doc/mmux-emacs-template.texi
doc_mmux_emacs_template_TEXINFOS = \
	doc/macros.texi			\
	doc/overview-linking.texi	\
	doc/gpl-3.0.texi		\
	doc/fdl-1.3.texi


#### libraries

mmux_emacs_template_CURRENT		= @mmux_emacs_template_VERSION_INTERFACE_CURRENT@
mmux_emacs_template_REVISION		= @mmux_emacs_template_VERSION_INTERFACE_REVISION@
mmux_emacs_template_AGE			= @mmux_emacs_template_VERSION_INTERFACE_AGE@
mmux_emacs_template_LINKER_VERSION	= -version-info $(mmux_emacs_template_CURRENT):$(mmux_emacs_template_REVISION):$(mmux_emacs_template_AGE)

include_HEADERS		= src/mmux-emacs-template.h

lib_LTLIBRARIES		= libmmux-emacs-template.la
libmmux_emacs_template_la_CPPFLAGS	= $(AM_CPPFLAGS)
libmmux_emacs_template_la_CFLAGS	= $(AM_CFLAGS)
libmmux_emacs_template_la_LDFLAGS	= $(mmux_emacs_template_LINKER_VERSION) $(AM_LDFLAGS)
libmmux_emacs_template_la_SOURCES	= \
	src/mmux-emacs-template.h		\
	src/mmux-emacs-template-internals.h	\
	src/mmux-emacs-template-library.c


#### Emacs code

# This  variable is  reserved to  the  package author.   Users of  the
# package can set ELCFLAGS.
AM_ELCFLAGS	= --quick --directory $(PWD)/.libs

dist_lisp_LISP	= src/mmux-emacs-template.el

src/mmux-emacs-template.elc: libmmux-emacs-template.la


#### tests

MMUX_EMACS_TEMPLATE_TESTS = \
	tests/version.el

EXTRA_DIST	+= $(MMUX_EMACS_TEMPLATE_TESTS)
TESTS		 = $(MMUX_EMACS_TEMPLATE_TESTS)

# We must make sure that this ends with a semicolon!!!
AM_TESTS_ENVIRONMENT	=
TEST_EXTENSIONS		= .el
EL_LOG_COMPILER		= $(EMACS)
AM_EL_LOG_FLAGS		= --batch --quick --directory $(builddir)/.libs --directory $(builddir)/src -l

## --------------------------------------------------------------------

MMUX_EMACS_INSTALLCHECK	= $(EMACS) --batch --quick --directory $(libdir) --directory $(lispdir) -l

installcheck-local: $(TESTS)
	@for f in $(TESTS); do $(MMUX_EMACS_INSTALLCHECK) $(srcdir)/$$f; done


#### common rules

include $(top_srcdir)/meta/automake/mmux-makefile-rules

### end of file
